# update-center

./: .gitignore  Cargo.toml  README.md  meson.build  org.gnome.UpdateCenter.yml
data/: org.gnome.UpdateCenter.desktop  org.gnome.UpdateCenter.metainfo.xml  resources.gresource.xml  style.css
data/systemd/: org.gnome.UpdateCenter.service.in
data/ui/: drivers_view.ui  firmware_view.ui  main_window.ui  settings_view.ui  update_view.ui
src/: application.rs  main.rs
src/config/: mod.rs
src/services/: drivers.rs  firmware.rs  mod.rs  package.rs  repositories.rs
src/ui/: drivers_view.rs  firmware_view.rs  main_window.rs  mod.rs  settings_view.rs  update_view.rs
