[package]
name = "gnome-update-center"
version = "0.1.0"
edition = "2021"
authors = ["GNOME Team"]
description = "Unified update management tool for GNOME"
license = "GPL-3.0-or-later"

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
log = "0.4"
pretty_env_logger = "0.5"
zbus = "3.14"
async-std = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
once_cell = "1.18"
regex = "1.9"

[[bin]]
name = "gnome-update-center"
path = "src/main.rs"